# autofill-files-script

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
